Bug: Fix map overflow so as to keep it within its container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,10 @@
 }
 
 body {
-  overflow-x: hidden;
   color: #777777;
 }
-/* Header*/
 
+/* Header*/
 .header {
   padding: 0px 0px;
   
@@ -67,7 +66,7 @@ margin-left: auto;
     max-width: 100%;
     
     background: url("../images/homepage-hero-image.png") no-repeat center center;
-     -webkit-background-size: cover;
+    -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
@@ -95,13 +94,16 @@ footer {
 #text-copyright small {
     color: #fafafa;
 }
+
 /* Search Section*/
 #search-function {
-    height: 500px;
+    height: 600px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 #location {
-    color: #8a2be2;
+    color: #4f4757;
     font-size: 120%;
     font-weight: bold;
 }
@@ -119,16 +121,13 @@ footer {
     display: flex;
     justify-content: center;
     color: #777777; 
-
+  
 }
+
 
 div#map {min-height: 360px;}
 
 /* Contact form*/
-
-.contact-form {
-  
-}
 
 .contact-button {
   margin-top: 15px;
